--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,6 +13,7 @@
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
+  --font-serif: var(--font-noto-serif);
   --font-sans: var(--font-noto-sans);
   --font-sans-tamil: var(--font-noto-sans-tamil);
 }
@@ -27,5 +28,5 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: "Noto Sans", "Noto Sans Tamil", sans-serif;
+  font-family: "Noto Sans", "Noto Sans Tamil", "Noto Serif";
 }
