add romanization to display

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,6 +8,7 @@
 @theme {
   --color-default-black: #2B2B2B;
   --color-default-white: #F9FBFD;
+  --color-pale-orange: #FAE5BB;
 }
 
 @theme inline {
